[project]
name = "screamsheet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "exceptiongroup==1.3.0",
    "feedparser==6.0.12",
    "filetype==1.2.0",
    "frozenlist==1.8.0",
    "google-ai-generativelanguage==0.9.0",
    "google-api-core==2.25.1",
    "google-api-python-client==2.181.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-genai==1.39.1",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.4",
    "grpcio>=1.76.0",
    "grpcio-status==1.71.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.30.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jiter==0.12.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==1.0.5",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.1",
    "langchain-core==1.0.4",
    "langchain-google-genai==3.0.3",
    "langchain-openai==1.0.2",
    "langchain-text-splitters==1.0.0",
    "langgraph==1.0.3",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.4",
    "langgraph-sdk==0.2.9",
    "langsmith==0.4.42",
    "lorem-text==3.0",
    "marshmallow==3.26.1",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "nba-api==1.10.2",
    "nhl-api-py==3.0.2",
    "numpy==2.2.6",
    "openai==2.8.0",
    "orjson==3.11.4",
    "ormsgpack==1.12.0",
    "packaging==25.0",
    "pandas==2.3.1",
    "pillow==11.3.0",
    "pip==25.2",
    "pluggy==1.6.0",
    "propcache==0.4.1",
    "proto-plus==1.26.1",
    "protobuf==5.29.5",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "pytest==8.4.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "reportlab==4.4.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "setuptools==80.9.0",
    "sgmllib3k==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "websockets==15.0.1",
    "wheel==0.45.1",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zstandard==0.25.0",
]
